voting_app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: votingapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
  namespace: votingapp
spec:
  tls:
  - hosts:
    - "www.hskglobaltech.shop"
    - "vote.hskglobaltech.shop"
    - "result.hskglobaltech.shop"
    secretName: wc-tls
  rules:
  - host: vote.hskglobaltech.shop
    http:
      paths:
      - paths: /
        pathType: Prefix
        backend:
          services:
            name: vote
            port:
              number: 80
  - host: www.hskglobaltech.shop
    http:
      paths:
      - paths: /
        pathType: Prefix
        backend:
          service:
            name: vote
            port:
              number: 80
  - host: result.hskglobaltech.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: result
            port:
              number: 80
